# codeforces_problem_sets

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake.yml  codeql-analysis.yml  main.yml
src/: temp_cmake.txt
src/1_F_Koishis_Unconscious_Permutation/: BUILD  CMakeLists.txt
src/2_watermelon/: BUILD.bazel  CMakeLists.txt
src/2_watermelon/src/: main.cpp
src/3_way_too_long_words/: BUILD.bazel  CMakeLists.txt
src/3_way_too_long_words/src/: main  main.cpp
src/4_team/: BUILD.bazel  CMakeLists.txt
src/4_team/src/: main.cpp
src/5_next_round/: BUILD.bazel  CMakeLists.txt
src/5_next_round/src/: main.cpp
src/6_domino_piling/: BUILD  CMakeLists.txt
src/6_domino_piling/src/: 6_domino_piling.cpp
