cmake_minimum_required(VERSION 3.16)
project(codeforces)
include(CheckCCompilerFlag)
include(CheckCXXCompilerFlag)
add_subdirectory(src/1_F_Koishis_Unconscious_Permutation)
add_subdirectory(src/2_watermelon)
add_subdirectory(src/3_way_too_long_words)
add_subdirectory(src/4_team)
add_subdirectory(src/5_next_round)
add_subdirectory(src/6_domino_piling)


